--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Project Name and language:
-PROJECT(ss-sers-control C)
+PROJECT(ss-sers-control LANGUAGES C)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
 
@@ -8,14 +8,32 @@ FIND_PACKAGE(PkgConfig REQUIRED)
 PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)
 
 # Now tell CMake to use said libraries and whatnot:
-INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
-LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
+#INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
+#LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
 
 # Add additional flags:
 ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})
 
 # equivalent of -rdyanmic, but that doesn't exist here:
 SET(GCC_DYNAMIC_LINK_FLAGS "-Wl,--export-all-symbols")
+
+# Include header files from include directories
+SET(MAIN_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
+INCLUDE_DIRECTORIES(
+  ${GTK_INCLUDE_DIRS}
+  ${MAIN_INCLUDE_DIR}/fftw
+  ${MAIN_INCLUDE_DIR}/wavepond
+  ${MAIN_INCLUDE_DIR}/app
+  #${MAIN_INCLUDE_DIR}/gtk
+)
+
+# Add libraries
+SET(MAIN_LIBRARY_DIR "${CMAKE_SOURCE_DIR}/lib")
+LINK_DIRECTORIES(
+  ${GTK_LIBRARY_DIRS}
+  ${MAIN_LIBRARY_DIR}/wavepond
+  #${MAIN_INCLUDE_DIR}/gtk
+)
 
 # Put our executable in the root directory:
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
@@ -26,5 +44,8 @@ ADD_EXECUTABLE(app ./src/main.c)
 # Specify to use our custom linker flags:
 TARGET_LINK_OPTIONS(app PUBLIC "${GCC_DYNAMIC_LINK_FLAGS}")
 
-# Link to the target:
+# Link GTK to the target:
 TARGET_LINK_LIBRARIES(app ${GTK_LIBRARIES})
+
+# And waveform generator:
+TARGET_LINK_LIBRARIES(app dax22000_lib_DLL64)
