Added test executable as well as turned on more compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ FIND_PACKAGE(Threads REQUIRED)
 SET(MAIN_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
 INCLUDE_DIRECTORIES(
   ${GTK_INCLUDE_DIRS}
-  ${MAIN_INCLUDE_DIR}/fftw
+  #${MAIN_INCLUDE_DIR}/fftw
   ${MAIN_INCLUDE_DIR}/wavepond
   ${MAIN_INCLUDE_DIR}/app
 )
@@ -38,6 +38,11 @@ SET (COMMON_SRCS
   ${MAIN_SRC_DIR}/main.c
   ${MAIN_SRC_DIR}/waveform_gen.c
   ${MAIN_SRC_DIR}/acquire_data.c
+  ${MAIN_SRC_DIR}/data_output.c
+)
+
+SET (TEST_SRCS
+  ${MAIN_SRC_DIR}/test.c
 )
 
 # Subdirectory for generator:
@@ -48,18 +53,29 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 # Add our executable:
 ADD_EXECUTABLE(app ${COMMON_SRCS} pn_code.h)
+ADD_EXECUTABLE(test ${TEST_SRCS})
 
 # Specify to use our custom linker flags:
 TARGET_LINK_OPTIONS(app PUBLIC ${GCC_DYNAMIC_LINK_FLAGS})
+TARGET_LINK_OPTIONS(test PUBLIC ${GCC_DYNAMIC_LINK_FLAGS})
+
+# Turn on more warnings:
+TARGET_COMPILE_OPTIONS(app PRIVATE -Wall)
+TARGET_COMPILE_OPTIONS(test PRIVATE -Wall)
 
 # Link GTK to the target:
 TARGET_LINK_LIBRARIES(app PUBLIC ${GTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(test PUBLIC ${GTK_LIBRARIES})
 
 # And waveform generator:
 TARGET_LINK_LIBRARIES(app PUBLIC ${DAX_LIB})
 
 # Add math library:
 TARGET_LINK_LIBRARIES(app PUBLIC m)
+TARGET_LINK_LIBRARIES(test PUBLIC m)
+
+# Add FFTW Library:
+TARGET_LINK_LIBRARIES(test PUBLIC fftw3)
 
 # Add pthreading:
 TARGET_LINK_LIBRARIES(app PRIVATE Threads::Threads)
