--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ lib/omnidriver/*
 # Overview notes, which should eventually be moved to issue tracking / README
 # on GitHub
 code-overview.txt
+
+# Script to rebuild "build" directory automatically
+rebuild_script.sh
