Added a wvfm_test program that only controls the waveform generator to be used for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,15 @@ SET (COMMON_SRCS
 SET (TEST_SRCS
   ${MAIN_SRC_DIR}/test.c
   ${MAIN_SRC_DIR}/spectrometer_functions.c
+  ${MAIN_SRC_DIR}/fft_functions.c
+  ${MAIN_SRC_DIR}/data_output.c
+  ${MAIN_SRC_DIR}/waveform_gen.c
 )
 
+SET (WVFM_TEST_SRCS
+  ${MAIN_SRC_DIR}/waveform_test_program.c
+  ${MAIN_SRC_DIR}/waveform_gen.c
+)
 
 # Put our executable in the root directory:
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
@@ -58,30 +65,37 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 # Add our executable:
 ADD_EXECUTABLE(app ${COMMON_SRCS})
 ADD_EXECUTABLE(test ${TEST_SRCS})
+ADD_EXECUTABLE(wvfm_test ${WVFM_TEST_SRCS})
 
 # Specify to use our custom linker flags:
 TARGET_LINK_OPTIONS(app PUBLIC ${GCC_DYNAMIC_LINK_FLAGS})
 TARGET_LINK_OPTIONS(test PUBLIC ${GCC_DYNAMIC_LINK_FLAGS})
+TARGET_LINK_OPTIONS(wvfm_test PUBLIC ${GCC_DYNAMIC_LINK_FLAGS})
 
 # Turn on more warnings:
 TARGET_COMPILE_OPTIONS(app PRIVATE -Wall)
 TARGET_COMPILE_OPTIONS(test PRIVATE -Wall -D _WINDOWS)
+TARGET_COMPILE_OPTIONS(wvfm_test PRIVATE -Wall)
 
 # Link GTK to the target:
 TARGET_LINK_LIBRARIES(app PUBLIC ${GTK_LIBRARIES})
 TARGET_LINK_LIBRARIES(test PUBLIC ${GTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(wvfm_test PUBLIC ${GTK_LIBRARIES})
 
 # And waveform generator:
 TARGET_LINK_LIBRARIES(app PUBLIC ${DAX_LIB})
 TARGET_LINK_LIBRARIES(test PUBLIC ${DAX_LIB})
+TARGET_LINK_LIBRARIES(wvfm_test PUBLIC ${DAX_LIB})
 
 # And the SeaBreeze Library:
 TARGET_LINK_LIBRARIES(app PUBLIC ${SEABREEZE_LIB})
 TARGET_LINK_LIBRARIES(test PUBLIC ${SEABREEZE_LIB})
+TARGET_LINK_LIBRARIES(wvfm_test PUBLIC ${SEABREEZE_LIB})
 
 # Add math library:
 TARGET_LINK_LIBRARIES(app PUBLIC m)
 TARGET_LINK_LIBRARIES(test PUBLIC m)
+TARGET_LINK_LIBRARIES(wvfm_test PUBLIC m)
 
 # Add FFTW Library:
 TARGET_LINK_LIBRARIES(app PUBLIC fftw3)
